--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,17 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Red Hat Display', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@layer components {
+  .nav-link {
+    @apply text-white text-2xl block mt-2 hover:text-[#7280a7] transition duration-200 ease-in hover:underline hover:underline-offset-2;
+  }
+
+  .nav-link__active {
+    @apply text-[#adc2ff] font-semibold
+  }
 }
